0.7.19: the release is all three platforms - scripts/release-desktop.sh (tag → CI → signed DMG over CI's → mac/win/linux feed rows on eurobuddha.com/pandaapps/minimadesk.json → the three catalog rows; exits 1 otherwise), publish-desktop.sh + publish-desktop-platforms.sh; README/SPEC/CLAUDE.md describe the two node kinds, the Parlons tab, the jdk.httpserver JRE requirement and the release rhythm
Co-Authored-By: Claude Fable 5.1 <noreply@anthropic.com>
Claude-Session: https://claude.ai/code/session_01MBSKh2v36bv57U7DbdzXuz