@@ -4,9 +4,18 @@ Listed in the stores as **MinimaClassic Desktop** (`desktop/minima-core-apks/apk
 Releases: push a `vX.Y.Z` tag and CI builds the mac DMG, Windows installer and Linux AppImage onto a
 GitHub Release (see `SPEC.md` §3).
 
-A polished desktop **MiniDapp platform** for Minima — runs a full Minima classic
-node and opens installed MDS MiniDapps as **tabs**, in the Minima 2024 brand.
+A polished desktop **MiniDapp platform** for Minima — runs a full Minima node
+and opens installed MDS MiniDapps as **tabs**, in the Minima 2024 brand.
 MiniHub, in a party dress.
+
+Since 0.7.15 the node is the **Parlons Node** by default (`parlons-node.jar` from
+[eurobuddha/maxima](https://github.com/eurobuddha/maxima), pinned in `package.json` `parlonsNode`): the same
+full Minima node, with the MiniDapp System served by the node itself (loopback only, the MiniHUB and any
+`.mds.zip` exactly as before), plus **your Parlons account** — private chat, calls and payments under this
+node's seed, phones and computers paired to it — in its own **Parlons tab**, and a Maxima relay for others
+when you contribute (one public port). Settings → minimaDesk switches between the Parlons Node and the
+**classic** official `minima.jar` (MDS + classic Maxima); same chain, same wallet, same data folder either
+way. An install from before 0.7.15 keeps the classic jar until it switches.
 
 - **Real node, real MDS, real dapps** — true backwards compatibility. Any standard
   `.mds.zip` installs and runs unmodified.
@@ -19,6 +28,7 @@ MiniHub, in a party dress.
 ```bash
 cd desktop/minimaDesk
 ./scripts/fetch-jar.sh          # download the full classic minima.jar (has MDS + Maxima)
+npm run fetch:parlons           # download parlons-node.jar (the version pinned in package.json, sha256-verified)
 npm install
 npm start                       # builds the renderer (Vite) then boots the node + opens the shell
 npm run dev                     # rebuild-on-change + electron (reload with Cmd+R)
@@ -28,6 +38,19 @@ npm run dev                     # rebuild-on-change + electron (reload with Cmd+
 ```bash
 npm run dist:mac    # / dist:win / dist:linux  (electron-builder; runs the renderer build first)
 ```
+The bundled JRE must include `jdk.httpserver` (the Parlons Node's admin RPC, panel and gateway are
+`com.sun.net.httpserver`): `jlink --add-modules java.se,jdk.unsupported,jdk.httpserver …` — CI does this;
+locally, re-jlink `resources/jre` the same way.
+
+## Release — all three platforms, every time
+```bash
+npm run dist:mac:signed                                   # signed + notarized + verified DMG
+scripts/release-desktop.sh 0.7.19 "what changed"          # tag → CI (mac/win/linux) → signed DMG over CI's →
+                                                          # feed rows for all three → catalog rows; exits 1 otherwise
+```
+The app checks `https://eurobuddha.com/pandaapps/minimadesk.json` for its own updates (Settings → minimaDesk →
+Updates; a title-bar pill when one exists). A download is verified against the feed's sha256 and saved to
+Downloads — nothing installs by itself.
 
 ## Signing + notarization (mac) — a clean, Gatekeeper-approved install
 `npm run dist:mac` and the CI build sign and notarize automatically **once the credentials exist**; with
@@ -55,8 +78,14 @@ Windows SmartScreen is a separate story (an OV/EV code-signing certificate, or A
 Linux AppImage needs nothing.
 
 ## How it is put together
-- `main/` — Electron main process: spawns the node (`node-manager.js`), proxies RPC with the secrets
-  injected (`main.js`, `rpc.js`), stores hub prefs + custom wallpaper in userData (`prefs.js`).
+- `main/` — Electron main process: spawns the node (`node-manager.js`: the Parlons Node with every knob as a
+  `-D` property and Minima's own flags inside one quoted `-Dparlons.node.args`, or the classic jar), proxies
+  RPC with the secrets injected (`main.js`, `rpc.js`), the Parlons account's status + one-time panel link
+  (`parlons.js`), the update feed (`updater.js`), hub prefs + custom wallpaper in userData (`prefs.js`).
+- **The Parlons tab** (Parlons Node only) — the account's own web panel, served on `127.0.0.1:<port+586>`,
+  in one hardened `<webview partition=persist:parlons>` signed in with the one-time ticket the account keeps
+  beside its data. Its Devices page pairs your phones (the code), its Node page shows what to port-forward.
+  `will-attach-webview` allows exactly two origins: the node's MDS port and that panel.
 - `renderer/src/hub/` — a **verbatim fork of the classic MiniHUB 0.24.4** (the "MinimaOS" home screen:
   wallpaper, paged icon grid, folders, right-click menu, status bar, settings, install/update/delete).
   It talks to the node through `mds-shim.ts` (a `window.MDS` over the preload bridge) and opens dapps
